fix: `ProductCard`'s title overflow

--- a/packages/core/src/styles/global/utilities.scss
+++ b/packages/core/src/styles/global/utilities.scss
@@ -103,4 +103,5 @@ $base: 16px !default;
   line-clamp: $max-lines;
   text-overflow: -o-ellipsis-lastline;
   text-overflow: ellipsis;
+  white-space: normal;
 }
